--- a/documentation/bmc.tex
+++ b/documentation/bmc.tex
@@ -481,6 +481,42 @@ Plot are nice, hence some effort has been put into making them look nice.
     \end{tikzpicture}
 \end{center}
 
+\paragraph{Asymptopes}
+A notable addition made is some nice asymptote-related pgf keys that have been added.
+There are three relevant keys
+\begin{itemize}
+    \item[] \mintinline{tex}{v asym} locations(s) of vertical asymptotes
+    \item[] \mintinline{tex}{h asym} locations(s) of horizontal asymptotes
+    \item[] \mintinline{tex}{asym gap} distance around vertical asymptote which is cleared
+\end{itemize}
+
+\begin{minipage}{\linewidth}
+    \begin{minted}{tex}
+        \begin{tikzpicture}
+            \begin{axis}[domain=0:3,small]
+                \addplot+[asym gap=0.05,v asym={0.5,1.5,2.5}]{tan(deg(pi*x))};
+            \end{axis}
+        \end{tikzpicture}
+        \begin{tikzpicture}
+            \begin{axis}[domain=-1:3,small]
+                \addplot+[asym gap=0.1,v asym=1,h asym=5]{1/(x-1)+5};
+            \end{axis}
+        \end{tikzpicture}
+    \end{minted}
+    \begin{center}
+        \begin{tikzpicture}
+            \begin{axis}[domain=0:3,small]
+                \addplot+[asym gap=0.05,v asym={0.5,1.5,2.5}]{tan(deg(pi*x))};
+            \end{axis}
+        \end{tikzpicture}
+        \begin{tikzpicture}
+            \begin{axis}[domain=-1:3,small]
+                \addplot+[asym gap=0.1,v asym=1,h asym=5]{1/(x-1)+5};
+            \end{axis}
+        \end{tikzpicture}
+    \end{center}
+\end{minipage}
+
 \section{Code}
 
 This package spends a few lines tweaking
