documentation: tweaks + typos

--- a/documentation/bmc.tex
+++ b/documentation/bmc.tex
@@ -1032,16 +1032,17 @@ colours as you like.
 \label{sec:why-typefaces}
 
 \subsection{Studies}
-Unfortunately large type studies on UI/UX and typography
+Unfortunately large type studies on \acr{UI}/\acr{UX} and typography
 seem to be exclusive to large companies that care about this
 (e.g.\ microsoft, google, etc.) and don't seem to publish their results.
+So, I just have a quick look at the little that is easy to find.
 
 It has long been known that there is a relationship between the reader's judged
 aesthetic pleasingness of text, and the legibility (\cite{Tinker_Paterson_1942}).
 Regardless of the underlying mechanisms, this provides strong justification for
 putting in the effort to make a document have good content, \emph{and} good aesthetics.
 
-A study by \cite{kaspar2015matter} presented subjects with research papers in
+A study by~\cite{kaspar2015matter} presented subjects with research papers in
 serif and sans-serif fonts. They found that sans-serif fonts increase reading speed.
 While this was not a focus of the study, it is apparently in line with previous research.
 A 2005 study by~\cite{Gasser_Boeke_Haffernan_Tan_2005} found that
