--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -59,3 +59,37 @@
   title     = {The elements of typographic style},
 }
 
+@article{Laurence1991,
+  abstract  = {The Lüscher colour test is used to compare colour associations in China, South Korea, Japan and the United States. Respondents were asked which colour they associate with words such as expensive, happy, love and dependable. They were also asked to relate the colours to countries, such as Italy and France; institutions, such as restaurants and theatres; and product packages, such as a soft drink label and a box of headache remedy. The findings show that, while some colours seem to show cross-cultural consistency, other colours, such as purple and grey, hold opposite meanings in different cultures.},
+  author    = {Laurence, Jacobs},
+  publisher = {MCB UP Ltd},
+  url       = {https://doi.org/10.1108/02651339110137279},
+  date      = {1991-01-01},
+  doi       = {10.1108/02651339110137279},
+  issn      = {0265-1335},
+  number    = {3},
+  title     = {Cross-cultural Colour Comparisons: Global Marketers Beware!},
+  volume    = {8},
+}
+
+@article{OConnnor2011,
+  abstract     = {Information about colour psychology and colour therapy abounds in popular culture. Articles found in mass media as well as a plethora of Internet websites are often devoted to colour and a range of psychological, biological, and behavioral effects. The information available, which varies from scant summaries with catchy titles to lengthy and comprehensive discussions, is often presented in an authoritative manner exhorting the reader to believe a range of claims such as red is physically stimulating and arousing and blue is calming, relaxing and healing. However, empirical evidence or evidence of any nature is only rarely cited and, when it is, it's often in reference to findings that are inappropriately generalized or out-of-date and superseded. This article discusses a range of colour psychology and colour therapy claims found in popular culture and notes the similarities between these claims and the writings of early theorists such as Birren, Goldstein, Gerard and Luscher. While these authors have a valid if somewhat dated place in the literature on colour, there are a number of key reasons to be wary of colour psychology and colour therapy claims made in popular culture. These reasons are discussed in some detail and provide compelling support for applying the caveat emptor principle to colour psychology and colour therapy claims found in nonacademic sources.},
+  author       = {O'Connor, Z},
+  language     = {eng},
+  url          = {http://search.proquest.com/docview/889394375/},
+  date         = {2011-04-11},
+  issn         = {0361-2317},
+  journaltitle = {Color Research and Application},
+  keywords     = {Analogies ; Color ; Colour ; Culture ; Internet ; Psychology ; Readers ; Therapy ; Instruments and Measurements (So)},
+  number       = {3},
+  pages        = {229,234},
+  title        = {Colour Psychology and Colour Therapy: Caveat Emptor},
+  volume       = {36},
+}
+
+@online{web_colour,
+  author = {Kolenda, Nick},
+  url    = {https://www.nickkolenda.com/color-psychology},
+  date   = {2019-10},
+  title  = {Color Psychology: An Enormous Guide},
+}
